from sqlalchemy import select, ForeignKey, Index, Integer, String, text, types
from sqlalchemy.ext.asyncio import AsyncSession

from sqlalchemy.dialects.postgresql import TSVECTOR

from sqlalchemy.orm import Mapped, mapped_column, relationship


from core.database import to_tsvector_ix

from src.modules.roles.models import Role
from core.database import BasicBaseAsync


class TSVector(types.TypeDecorator):

    impl = TSVECTOR


class User(BasicBaseAsync):

    __tablename__ = "users"

    username: Mapped[str] = mapped_column(unique=True, nullable=False)

    role_ref: Mapped[int] = mapped_column(
        Integer, ForeignKey("roles.id"), nullable=False
    )

    role: Mapped[Role] = relationship("Role")

    password: Mapped[str] = mapped_column(nullable=False)

    email: Mapped[str] = mapped_column(unique=True)

    full_name: Mapped[str] = mapped_column(nullable=False)

    otp_secret: Mapped[str] = mapped_column(String, nullable=True)
    otp_enabled: Mapped[bool] = mapped_column(default=False)

    __table_args__ = (
        Index(
            "ix_user_tsv",
            to_tsvector_ix("username", "email", "full_name"),
            postgresql_using="gin",
        ),
        Index(
            "ix_users_role_ref_active",
            "role_ref",
            postgresql_where=(text("deleted_at IS NULL")),
        ),
        {"extend_existing": True},
    )
