from typing import TYPE_CHECKING
from sqlalchemy import String, Integer, ForeignKey, Index, Text
from sqlalchemy.orm import Mapped, mapped_column, relationship

from core.database import RelationBaseAsync

if TYPE_CHECKING:
    from src.modules.values.models import Value


class MetaValue(RelationBaseAsync):
    """
    Flexible key-value metadata for values.
    Examples: year, month, promotion, category, etc.
    """

    __tablename__ = "meta_values"

    ref_value: Mapped[int] = mapped_column(
        Integer, ForeignKey("values.id"), nullable=False
    , primary_key=True)
    key: Mapped[str] = mapped_column(String(100), primary_key=True, nullable=False)
    value: Mapped[str] = mapped_column(Text, nullable=True)

    # Relationship back to Value
    value_obj: Mapped["Value"] = relationship("Value", back_populates="meta")

    __table_args__ = (
        Index("idx_values_meta_key_ref_value", "key", "ref_value", unique=True),
    )
