Enum balance_type {
  basic
  adjustment
}

TablePartial shared{
  uid varchar [pk, unique, note: "UUID"]
  id int [pk, increment] // 'increment' es vital para IDs numéricos
  created_at timestamp [default: `now()`]
  updated_at timestamp
  deleted_at timestamp // Para Soft Deletes
}

Table users {
  ~shared

  username varchar [unique, not null]
  role_ref int [ref: - roles.id, not null]
  password varchar [not null]
  email varchar [unique]
  full_name varchar [not null]
  otp_secret varchar
  otp_enabled bool

  indexes {
    username [unique]
    email [unique]
  }
}

Table meta_users{
  ~meta
  user_ref int [ref: - users.id, not null]

  indexes {
    (key, user_ref) [unique]
  }
}

Table roles {
  ~shared

  name varchar [not null]
  action varchar [not null]
  description varchar [not null]
  level int [unique, not null]
  permissions "int[]" [not null]
  disabled bool [default: false]
}

Table permissions {
  ~shared
  is_deleted bool

  name varchar [unique, not null]
  action varchar [not null]
  description varchar [not null]
  type varchar [not null]
}

Table permissions_roles{
  ~shared
  ref_role int [ref: - roles.id, not null]
  ref_permission int [ref: - permissions.id, not null]

  indexes {
    (ref_role, ref_permission) [unique]
  }
}

Table meta_permissions{
  ~meta
  ref_permission int [ref: - permissions.id, not null]
}


Table values{ // values are the units of measurement for the finances app "can be any kind of value that can be compared with another value"
  ~shared
  name varchar // dolar, Hummer H2, stock
  business_entity_ref int [ref: - business_entities.id]
  type varchar // vehicle, crypto, supply, fiat, ingredient, made-from, by-product
  expression varchar // usd, btc, kg, mt, mt^2, CAR denomination or something like that
  indentifier varchar // 2016, "some text that not repeat beetween names like 'date, especification'  can be null"

  indexes {
    name
    business_entity_ref
    type
    expression
  }
}

Table values_hierarchy {
  ref_value_top int [ref: - values.id, not null]
  ref_value_bottom int [ref: - values.id, not null]

  indexes {
    (ref_value_top, ref_value_bottom) [unique]
  }
}

Table meta_values{
  ~meta // meta data for values like year, month, day, promotion
  value_ref int [ref: - values.id, not null]

  indexes {
    value_ref
  }
}


Table business_entities {
  ~shared
  name varchar [not null] 
  description varchar

  indexes {
    name
  }
}

Table meta_business_entities {
  ~meta
  ref_business_entity int [ref: - business_entities.id]

  indexes {
    ref_business_entity
  }
}

Table business_entities_hierarchy {
  ref_entity_top int [ref: - business_entities.id, not null]
  ref_entity_bottom int [ref: - business_entities.id, not null] 

  indexes {
    (ref_entity_top, ref_entity_bottom) [unique]
  }
}



Table balances {
  ~shared
  type balance_type
  quantity float [default: 0.0]
  ref_value int [ref: - values.id, not null]

  indexes {
    ref_value
    type
  }
}


Table decorators_balances{
  ref_balance_from varchar [ref: - balances.id, not null] // USD
  balance_decorators json
  is_reactive bool [default: false]
  ref_balance_to varchar [ref: - balances.id, not null] // USD
}


Table transactions {
  ~shared
  quantity varchar
  operation_type enum("+", "-")
  reference_code varchar [note: "Nro Factura, Recibo"]
  ref_inverse_transaction int [ref: - transactions.id]
  ref_by_user int [ref: - users.id, not null]
  ref_balance_from int [ref: - balances.id, not null]
  ref_balance_to int [ref: - balances.id, not null]

  indexes {
    ref_balance_from
    ref_balance_to
    ref_by_user
    reference_code
  }
}

Table meta_transactions_buffer {
  ~meta
  ref_transactions_buffer int [ref: - transactions_buffer.id, not null]

  indexes {
    ref_transactions_buffer
  }
}

Table invoice_transactions {
  ref_invoice int [ref: - invoice.id]
  ref_transactions int [ref: > transactions.id, not null]

  indexes {
    (ref_invoice, ref_transactions)
  }
}

Table invoice {
  ~shared
  context varchar
  name varchar
  type varchar
  serial varchar
  notes text
}

Table meta_invoice {
  ~meta
  ref_invoice int [ref: - invoice.id]

  indexes {
    ref_invoice
  }
}


Table invoice_business_entities {
  value_invoice int [ref: - invoice.id, not null]
  value_business_entity int [ref: - business_entities.id, not null]

  indexes {
    (value_invoice, value_business_entity) [unique]
  }
}



Table transactions_buffer {
  ~shared
  quantity varchar
  operation_type enum("+", "-")
  state varchar
  trigger varchar
  ref_inverse_transaction int [ref: - transactions_buffer.id]
  ref_by_user int [ref: - users.id, not null]
  ref_balance_from int [ref: - balances.id, not null]
  ref_balance_to int [ref: - balances.id, not null]

  indexes {
    ref_balance_from
    ref_balance_to
    ref_by_user
    state
  }
}

Table meta_transactions {
  ~meta
  ref_transactions int [ref: - transactions.id, not null]

  indexes {
    ref_transactions
  }
}


Table balances_business_entities{
  ref_business_entity int [ref: - business_entities.id, not null]
  ref_balances int [ref: - balances.id, not null]

  indexes {
    (ref_business_entity, ref_balances) [unique]
  }
}


Table persons {
  ~shared 
  first_names varchar [not null]
  last_names varchar [not null]
  email varchar
  identifier varchar
  type_identifier varchar
}

Table persons_business_entities {

  ref_persons int [ref: - persons.id, not null]
  ref_business_entity int [ref: - business_entities.id, not null]

  indexes {
    (ref_persons, ref_business_entity) [unique]
  }
}

Table meta_persons {
  ~meta
  ref_person int [ref: - persons.id, not null]

  indexes {
    ref_person
  }
}

Table meta_comparation_values{
  ~meta
  ref_comparation_values int [ref: - comparation_values.id, not null] // USD
}

Table comparation_values{ // comparation values are the values that are compared with another value
  ~shared
  context varchar
  quantity_from int [default: 1]
  quantity_to float
  value_from int [ref: - values.id, not null] // Item ID
  value_to int [ref: - values.id, not null] // Currency ID (e.g. USD)

  indexes {
    value_from
    value_to
    context
  }
}

Table decorators_comparation_values{
  ref_comparation_values_from int [ref: - comparation_values.id, not null] // USD
  comparison_decorators json
  is_reactive bool [default: false]
  ref_comparation_values_to int [ref: - comparation_values.id, not null] // USD

}

Table comparation_values_historical{
  ~shared
  quantity_from int // 1
  quantity_to varchar //  465.7
  value_from int [ref: - values.id, not null] // USD
  value_to int [ref: - values.id, not null] // Bs
}

Table meta_comparation_values_historical{
  ~meta
  ref_comparation_values_historical int [ref: - comparation_values_historical.id, not null] // Bs
}

Table decorators_comparation_values_historical{
  ref_comparation_values_from int [ref: - comparation_values_historical.id, not null] // USD
  comparison_decorators json
  ref_comparation_values_to int [ref: - comparation_values_historical.id, not null] // USD

}

Table options {
  ~shared
  context varchar
  name varchar
  value text
}

TablePartial meta {
  key varchar
  value varchar
}




Ref: "persons"."uid" < "persons"."created_at"